--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing = "10">
         <tr>
-            <td><img src="images/trying4.jpeg" alt="Utku Özkanlı's personal photo"></td>
+            <td><img src="images/trying4.jpg" alt="Utku Özkanlı's personal photo"></td>
             <td> <h1>Utku Özkanlı</h1>
                 <p><em>Student at <strong><a href="https://www.itu.edu.tr/en">Istanbul Technical University</a></strong></em></p>
                 <br>
